--- a/www/index.html
+++ b/www/index.html
@@ -374,17 +374,17 @@
             </li>
             <li class="collection-item avatar graphType" ng-click="FauxBuy()">
                 <i class="mdi-editor-insert-chart circle yellow"></i>
-                <p class="padding-top">Horizontal Bar Chart (£5.99)</p>
+                <p class="padding-top">Horizontal Bar Chart (Not currently available)</p>
                 <a href="#!" class="secondary-content"></a>
             </li>
             <li class="collection-item avatar graphType" id="" ng-click="FauxBuy()">
                 <i class="mdi-av-equalizer circle orange"></i>
-                <p class="padding-top">Column Chart (£5.99)</p>
+                <p class="padding-top">Column Chart (Not currently available)</p>
                 <a href="#!" class="secondary-content"></a>
             </li>
             <li class="collection-item avatar graphType" ng-click="FauxBuy()">
                 <i class="mdi-device-signal-wifi-0-bar circle blue"></i>
-                <p class="padding-top">Pie Chart (£5.99)</p>
+                <p class="padding-top">Pie Chart (Not currently available)</p>
                 <a href="#!" class="secondary-content"></a>
             </li>
         </ul>
